--- a/home.html
+++ b/home.html
@@ -25,6 +25,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a button class="login_button" onclick="openForm()">Order Online</a></li>
                 </ul>
+                <p>cute ka naman</p>
 
             </nav>
         </header>
