--- a/about.html
+++ b/about.html
@@ -73,6 +73,11 @@
                                   <p class="first-p">Please fill in this form to create an account.</p>
                                   <br>
                                   <hr>
+                                  <label for="full-name"><b>Full Name</b></label><br>
+                                  <input type="text" placeholder="Enter Full Name" name="full-name" id="full-name" required>
+
+                                  <label for="username"><b>Username</b></label><br>
+                                  <input type="text" placeholder="Enter Username" name="username" id="username" required>
                               
                                   <label for="email"><b>Email</b></label><br>
                                   <input type="text" placeholder="Enter Email" name="email" id="email" required>
