--- a/order.html
+++ b/order.html
@@ -17,7 +17,7 @@
             <div class="logo">
                 <img src="Kope Pictures\new (6).png">
             </div>
-            <div class="current-user" id="current-user"><p>Faith Santos</p></div>
+            <div class="current-user" id="current-user"></div>
             <div class="cart"><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p>
 
             </div>
