--- a/order.html
+++ b/order.html
@@ -61,7 +61,7 @@
                     <h2 id="total">₱ 0.00</h2>
                 </div>
                 <div class="check-out">
-                    <a href="checkout.html"><button id="check-button">CHECKOUT</button></a>
+                    <a href="checkout.html"><button onclick = "checkout()"id="check-button">CHECKOUT</button></a>
                 </div>
             </div>
         </div>
