--- a/confirmation.html
+++ b/confirmation.html
@@ -29,10 +29,10 @@
                 <p>The details of your order will be sent directly to your number and your email address</p>
             </div>
             <div class="back-text">
-                <a href="order.html">Order Again</a>
+                <a href="order.html" onclick="localStorage.removeItem('order')">Order Again</a>
             </div>
             <div class="home-text">
-                <a href="home.html">Go Back to Homepage</a>
+                <a href="home.html" onclick="localStorage.clear()">Go Back to Homepage</a>
             </div>
         </div>
     </center>
