--- a/checkout.html
+++ b/checkout.html
@@ -74,7 +74,7 @@
 
                                     <div class="expiry">
                                         <label for="expiry"><b>Expiration Date</b></label><br>
-                                        <input type="number"id="expiry1" placeholder= "dd" name="expiry" required>/
+                                        <input type="number" id="expiry1" placeholder= "dd" name="expiry" required>/
                                         <input type="number" id="expiry2" placeholder= "mm" name="expiry" required>                                        
                                         <label for="cvv">Cvv</label>
                                         <input type="number" id="expiry3"  placeholder="" name="cvv" required>
@@ -112,18 +112,18 @@
                         -->
                         </div>
                     </div>
+                    <div class="total-payment">
+                        <p>To Pay</p> <p id="totalpayment">₱ 120.00</p>
+                    </div>
 
                     
                 </section>
 
-                <div class="total-payment">
-                    <p>To Pay</p> <p id="totalpayment">₱ 120.00</p>
-                </div>
             </div>
 
             <div class="button-area">
                 <div class="checkout-btn">
-                    <a href="confirmation.html"><button type="submit" class="button-confirmation">Checkout</button></a>
+                    <a href="confirmation.html"><button type="submit"  id="btn"  class="button-confirmation">Checkout</button></a>
                 </div>
                 <div class="cancel">
                     <a href="order.html"><p>Cancel</p></a>
