--- a/home.html
+++ b/home.html
@@ -85,13 +85,13 @@
                               
                                   <div class="input-box-two">
                                     <label for="psw"><b>Password</b></label><br>
-                                    <input type="password" placeholder="Enter Password" name="psw" id="psw" required id="password">
+                                    <input type="password" placeholder="Enter Password" name="passtwo" id="passtwo" required>
                                     <i class="fa-solid fa-eye-slash" id="eyeTwo"></i>
                                   </div>
                               
                                   <div class="input-box-three">
                                     <label for="psw-repeat"><b>Repeat Password</b></label><br>
-                                    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required id="password">
+                                    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required >
                                     <i class="fa-solid fa-eye-slash" id="eyeThree"></i>
                                   </div>
                                   <hr>
