--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
             <div id="root"></div>
             <div class="sidebar">
                 <div class="head">My Orders</div>
-                <div id = "items" oninput="handleInputChange()">
+                <div id = "items">
                     <!--
                         code below will be generated via DOM manipulation
 
@@ -61,7 +61,7 @@
                     <h2 id="total">₱ 0.00</h2>
                 </div>
                 <div class="check-out">
-                    <a href="checkout.html"><button disabled onclick ="checkout()"id="check-button">CHECKOUT</button></a>
+                    <a href="checkout.html"><button onclick ="checkout()"id="check-button">CHECKOUT</button></a>
                 </div>
             </div>
         </div>
