--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
                                   <input type="text" placeholder="Enter Full Name" name="full-name" id="full-name" required>
 
                                   <label for="username"><b>Username</b></label><br>
-                                  <input type="text" placeholder="Enter Username" name="username" id="username" required>
+                                  <input type="text" placeholder="Enter Username" name="username2" id="username2" required>
 
                                   <label for="email"><b>Email</b></label><br>
                                   <input type="text" placeholder="Enter Email" name="email" id="email" required>
@@ -97,7 +97,7 @@
                                   <hr>
                               
                                   <p class="second-p">By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p><br>
-                                  <a href="order.html"><button type="submit" class="registerbtn">Register</button></a>
+                                  <a onclick = "login2()"href="order.html"><button type="submit" class="registerbtn">Register</button></a>
                                   <div class="container-signin">
                                     <p>Already have an account? <a href="#" onclick="loginAgain()">Sign in</a>.</p>
                                   </div>
