--- a/menu.html
+++ b/menu.html
@@ -60,7 +60,7 @@
                     </div>
     
                     <div id="all-two">
-                        <div class="form-pop-up-two" id="accountForm">
+                        <div class="form-pop-up-two" id="accountForm" onsubmit="return validateForm()">
                             <form action="order.html" class="account-container">
                                 <div class="parentDisableTwo" id="pop2"></div> 
                                 <div class="form-two">
